# cats

./: .buildinfo  .codecov.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  api-reference.html  api_query.py  carbonFootprint.py  cats  cats.py  cli-reference.html  config.yml  contributing.html  fixed_parameters.yaml  fixed_parameters.yml  genindex.html  index.html  installation.html  introduction.html  objects.inv  parsedata.py  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  use-with-schedulers.html  user-agent.html
.github/workflows/: cluster-tests.yml  docs-build-deploy.yml  draft-pdf.yml  publish.yml  tests.yml  zizmor.yml
_sources/: api-reference.rst.txt  cli-reference.rst.txt  index.rst.txt  introduction.rst.txt  quickstart.rst.txt  use-with-schedulers.rst.txt
cats/: CI_api_interface.py  CI_api_query.py  __init__.py  __main__.py  api_interface.py  api_query.py  carbonFootprint.py  carbon_footprint.py  check_clean_arguments.py  cli.py  config.yml  configure.py  constants.py  exceptions.py  forecast.py  optimise_starttime.py  output.py  parsedata.py  plotting.py  schedulers.py  timeseries_conversion.py  version.py
cats/providers/: __init__.py  base.py  uk_carbonintensity.py
cluster/: Dockerfile  README.md  build.sh  cleanup.sh  clone.sh  docker-compose.yml  install_cats.sh  start.sh  tests.sh
docs/: README.md  docs-requirements.txt
docs/paper/: paper.bib  paper.md
docs/source/: api-reference.rst  approach.rst  bibliography.rst  cli-reference.rst  conf.py  contributing.rst  history.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  refs.bib  use-with-schedulers.rst  user-agent.rst
src/timeseries_conversion/: converter.py  utils.py
tests/: carbon_intensity_24h.csv  test_api_query.py  test_check_clean_arguments.py  test_configure.py  test_connection_error.py  test_footprint.py  test_main.py  test_output.py  test_regressions.py  test_timeseries_conversion.py  test_window_constraints.py  test_windowed_forecast.py
tests/providers/: test_uk_carbonintensity.py
