[build-system]
  requires = ['setuptools>=40.8.0']
  build-backend = 'setuptools.build_meta'

[tool.setuptools]
  packages = ["cats"]
  package-data.cats = ["config.yml"]

[project]
  name = "climate-aware-task-scheduler"
  version = "1.0rc1"
  description = "Climate aware task scheduler"
  authors = [
    { name = "Colin Sauze" },
    { name = "Andrew Walker"},
    { name = "Loïc Lannelongue" },
    { name = "Thibault Lestang" },
    { name = "Tony Greenberg" },
    { name = "Lincoln Colling" },
    { name = "Adam Ward" },
    { name = "Abhishek Dasgupta" },
    { name = "Carlos Martinez" },
    { name = "Sadie Bartholomew" }
  ]
  license = { file = "LICENSE" }
  requires-python = ">=3.9"
  readme = "README.md"
  classifiers = ["License :: OSI Approved :: MIT License"]
  dependencies = ["requests-cache>=1.0", "PyYAML>=6.0"]

  [project.optional-dependencies]
    test = ["pytest", "numpy>=1.5.0", "pytest-subprocess==1.5.0", "pytest-cov"]
    types = ["mypy", "types-PyYAML", "types-redis", "types-requests", "types-ujson"]

  [project.urls]
    Home = "https://github.com/GreenScheduler/cats"

  [project.scripts]
    cats = "cats:main"

  [tool.ruff.lint]
    # Pyflakes (`F`), subset of the pycodestyle (`E`) and unsorted imports (`I001`)
    select = ["E4", "E7", "E9", "F", "I001"]
